--- a/README.org
+++ b/README.org
@@ -134,7 +134,6 @@
 
 *** Program code (provided here just for ease of reading, would be a separate file in your submission)
     #+begin_src java :exports code :tangle NamesakeListing.java
-      import java.io.File;
       import java.io.FileReader;
       import java.util.Scanner;
 
@@ -188,8 +187,7 @@
           int numPersons = 0;
 
           // open file and create a scanner for it
-          try (FileReader dataFileReader = new FileReader (new File (filename));
-               Scanner scanner = new Scanner (dataFileReader))
+          try (Scanner scanner = new Scanner (new FileReader (filename)))
           {
             try
             {
