* using File in Scanner instead of FileReader

--- a/README.org
+++ b/README.org
@@ -129,12 +129,11 @@
       program no longer needs them, even in the case of an exception.
       - ~Scanner~ for system input when reading user-supplied file
         name.
-      - ~FileReader~ and the associated ~Scanner~ when reading data
-        file.
+      - ~Scanner~ when reading data file.
 
 *** Program code (provided here just for ease of reading, would be a separate file in your submission)
     #+begin_src java :exports code :tangle NamesakeListing.java
-      import java.io.FileReader;
+      import java.io.File;
       import java.util.Scanner;
 
       class NamesakeListing
@@ -187,7 +186,7 @@
           int numPersons = 0;
 
           // open file and create a scanner for it
-          try (Scanner scanner = new Scanner (new FileReader (filename)))
+          try (Scanner scanner = new Scanner (new File (filename)))
           {
             try
             {
