--- a/README.org
+++ b/README.org
@@ -22,9 +22,6 @@
    - Submission is made via email by providing either
      - one ~.zip~-archive containing all files, or
      - a link to a GitHub repository containing all files.
-   - It is strongly suggested that you use documentation structure
-     similar to the example below, as this will make both your and my
-     life a lot easier.
    - An example is provided for you below, but your program need not
      be as complicated. The example below is relatively complicated,
      because it
@@ -33,6 +30,9 @@
      - defines a class and uses it to store and analyze data
      - contains a nested loop (loop within a loop) to process the
        data.
+   - However, it is strongly suggested that you use documentation
+     structure similar to the example below, as this will make both
+     your and my life a lot easier.
 ** Grading levels
 *** Criteria for level 1
 **** Specification
