--- a/README.org
+++ b/README.org
@@ -32,15 +32,17 @@
        data
      - uses ~null~ values for object variables to indicate that an
        object has been processed already.
-   - However, it is strongly suggested that you use documentation
-     structure similar to the example below, as this will make both
-     your and my life a lot easier.
+   - It is strongly suggested that you use documentation structure
+     similar to the example below, as this will make both your and my
+     life a lot easier.
 ** Grading levels
 *** Criteria for level 1
 **** Specification
      - There is a sensible description of what the program does.
-     - The program reads some input from user and/or from a text data
-       file and performs a meaningful operation on these.
+     - The program reads input from user and/or from a text data file
+       and performs a meaningful operation. The input must contain
+       multiple items of data (multiple numbers, or multiple lines of
+       text, or similar).
      - Format of input is explained clearly.
 **** Correctness and exception handling
      - The program works correctly in one documented test case with
