--- a/README.org
+++ b/README.org
@@ -9,6 +9,18 @@
      - correctness and exception handling
      - code clarity
      - resource management.
+   - An example is provided for you below, but your program need not
+     be as complicated. The example below is relatively complicated,
+     because it
+     - is capable of reading input from multiple sources: command
+       line, data file and keyboard (user)
+     - defines a class and uses it to store and analyze data
+     - contains a nested loop (loop within a loop) to process the
+       data
+     - uses ~null~ values for object variables to indicate that an
+       object has been processed already.
+
+** Project submission
    - Your submission consists of
      1. one *PDF file* containing documentation
         1. your target grade level (1, 2 or 3)
@@ -22,19 +34,10 @@
    - Submission is made via email by providing either
      - one ~.zip~-archive containing all files, or
      - a link to a GitHub repository containing all files.
-   - An example is provided for you below, but your program need not
-     be as complicated. The example below is relatively complicated,
-     because it
-     - is capable of reading input from multiple sources: command
-       line, data file and keyboard (user)
-     - defines a class and uses it to store and analyze data
-     - contains a nested loop (loop within a loop) to process the
-       data
-     - uses ~null~ values for object variables to indicate that an
-       object has been processed already.
    - It is strongly suggested that you use documentation structure
      similar to the example below, as this will make both your and my
      life a lot easier.
+   
 ** Grading levels
 *** Criteria for level 1
 **** Specification
