--- a/README.org
+++ b/README.org
@@ -20,6 +20,9 @@
      - uses ~null~ values for object variables to indicate that an
        object has been processed already.
 
+** Project deadline
+   The dealine of the project is <2020-01-31 Fri 23:59>.
+
 ** Project submission
    - Your submission consists of
      1. one *PDF file* containing documentation
