--- a/README.org
+++ b/README.org
@@ -32,10 +32,11 @@
         4. explanation of how exceptions and special cases are handled
            (levels 2 and 3)
         5. explanation of resource handling (level 3)
-     2. one ~.java~-file containing the code
+     2. one or more ~.java~-files containing the code
      3. possibly one or more text data files needed for the test case.
    - Submission is made via email by providing either
-     - one ~.zip~-archive containing all files, or
+     - one ~.zip~-archive containing all files as an attachment to the
+       email, or
      - a link to a GitHub repository containing all files.
    - It is strongly suggested that you use documentation structure
      similar to the example below, as this will make both your and my
