* project now in python

--- a/README.org
+++ b/README.org
@@ -56,45 +56,32 @@
        - Note: There are /many/ ways to do this. Read multiple lines
          from a file. Repeat the same operation multiple times for the
          user. Read multiple lines from user input.
-**** Correctness and exception handling
+**** Correctness
      - The program works correctly in one documented test case with
        typical input.
      - If any text data files are required to test this, they are
        supplied.
 **** Code clarity
-     - Code is indented correctly.
      - There is no unnecessary whitespace (no extra empty lines or
        extra spaces).
-     - Identifiers (names of variables, constants and functions) are
+     - Identifiers (names of variables, functions and classes) are
        meaningful in the context of the program.
 *** Additional criteria for level 2
-**** Correctness and exception handling
-     - At least one exception is caught and reported correctly.  This
-       is also documented.
+**** Testing for valid input
+     - Validity of input is tested in at least one case (for one type
+       of input) This is also documented.
 **** Code clarity
-     - Constants are identified and named.
      - All non-trivial parts of the code are
        commented. \ldquo{}Non-trivial\rdquo is defined by assuming
        that the reader is a fellow student.
 *** Additional criteria for level 3
-**** Correctness and exception handling *or* wow-factor
-     One of the following:
-     - The correct working of the program has been documented in all
-       possible special cases (except for the computer running out of
-       memory). That is, your program will not throw an exception
-       (unless your computer runs out of memory).
-     - Your program does something considerably more complex and/or
-       sophisticated that would be required. (In this case, it is
-       much more difficult to document correct working in all
-       special cases.)
-**** Resource management
-     - At least one resource is closed when no longer needed, even in
-       the case of an exception. This is also documented.
 **** Code clarity
-     - The flow of the program is split into meaningful functions
-       called by ~main()~.
-     - The role of defined functions is explained in comments.
+     - The flow of the program is split into meaningful functions.
+     - The role of defined functions is explained in docstrings.
      - If useful, classes are defined for program-specific data types.
+**** Resource management
+     - Opened resources are closed when no longer needed. This is also
+       documented.
 ** Example project
 *** Documentation
 **** Target assessment level
@@ -105,8 +92,7 @@
       1. reads data about persons from a file
       2. prints all persons in groups with namesakes (same first
          names) on consecutive lines.
-      The user supplies the name of the input file either as a program
-      argument or, if none is given, from keyboard.
+      The user supplies the name of the input file from keyboard.
 
 ***** Data format
        The input data text file consists of lines, each line
@@ -116,198 +102,114 @@
        #+end_center
        Both ~lastname~ and ~firstname~ are single words, while
        ~address~ is all the remaining text on the line.
-**** Correctness and exception handling
+**** Correctness
 ***** Typical test case
       File [[file:persons.txt]] contains data from 6 persons with 3 groups
       of namesakes. The number of persons in these groups is 3
       (Michael), 2 (Jane) and 1. When the program (file
-      [[file:Main.java]]) is run with
-      #+name: run-application
-      #+begin_src sh :exports both :cache no :results output verbatim
-      java Main.java persons.txt
-      #+end_src
+      [[file:main.py]]) is run.
 
       the output is correct, with each group of namesakes printed on
       consecutive lines:
+      #+begin_example
+        give path to data file: persons.txt
+        Cash Michael Las Vegas, US
+        Knight Michael Moving truck
+        Burnham Michael The final frontier
+        McGyver Agnus Phoenix, Foundation
+        Doe Jane Aberdeen, Scotland
+        Tarzan Jane Greystoke, UK
+      #+end_example
 
-      #+RESULTS: run-application
-      : Cash Michael Las Vegas, US
-      : Knight Michael Moving truck
-      : Burnham Michael The final frontier
-      : McGyver Agnus Phoenix, Foundation
-      : Doe Jane Aberdeen, Scotland
-      : Tarzan Jane Greystoke, UK
+**** Testing for valid input (level 2)
+     When user gives path to text file, the program tests whether the
+     file exists. If the file does not exits, the user is prompted to
+     input another path.
 
-***** Exception handling (levels 2 and 3)
-      The following are all the possible exceptions / special cases
-      and the way they are handled.
-      - More than one program argument: only the first one is used as
-        name of data file.
-      - Reading user-supplied data file name fails: exception is
-        caught and printed to user, program exits.
-      - Opening data file for reading fails: exception is caught and
-        printed to user, program exits.
-      - Reading data from data file fails: exception caught and
-        printed, program exits.
-      - Number of persons exceeds program constant: reported to user,
-        program exits.
-
-***** Resource management (level 3)
-      The following resources are opened with ~try~-with-resources
-      -statements and are therefore closed automatically when the
-      program no longer needs them, even in the case of an exception.
-      - ~Scanner~ for system input when reading user-supplied file
-        name.
-      - ~Scanner~ when reading data file.
+**** Resource management (level 3)
+     The input file is opened using a =with=-statement, and will
+     therefore be closed automatically.
 
 *** Program code (provided here just for ease of reading, would be a separate file in your submission)
-    #+begin_src java :exports code :tangle Main.java
-      import java.io.File;
-      import java.util.Scanner;
+    #+begin_src python :exports code :tangle main.py
+      import os.path
 
-      public class Main
-      {
-        public static void main (String[] args)
-        {
-          // maximum number of persons this program can handle
-          final int MAX_NUM_PERSONS = 1000;
+      def prompt_filename ():
+          """
+          Prompt the user for text file name until a valid file name is provided.
 
-          // get name of data file
-          String filename;
-          if (args.length >= 1)
-            filename = args [0];
-          else
-            filename = queryFilename ();
+          Returns:
+             path to valid text file
+          """
+          while not os.path.isfile (filename := input ('give path to data file: ')):
+              print (f'data file {filename} does not exist')
 
-          // read persons into an array
-          Person[] persons = new Person [MAX_NUM_PERSONS];
-          int numPersons = readPersons (filename, persons);
+          return filename
 
-          // list namesakes
-          printNamesakes (persons, numPersons);
-        }
+      class Person:
+          def __init__ (self, lastname, firstname, address):
+              self.lastname = lastname
+              self.firstname = firstname
+              self.address = address
 
-        // query the user for the name of data file; return value is the
-        // name of the file
-        static String queryFilename ()
-        {
-          String filename;
-          try (Scanner scanner = new Scanner (System.in))
-          {
-            System.out.print ("give data file name: ");
-            filename = scanner.next ();
-          }
-          catch (Exception e)
-          {
-            System.out.println ("unable to read data file name, exception: " + e);
-            filename = "";
-            System.exit (-1);
-          }
+          def __str__ (self):
+              return f'{self.lastname} {self.firstname} {self.address}'
 
-          return filename;
-        }
+          def is_namesake (self, person):
+              """
+              Tests whether this person is a namesake of another.
 
-        // read persons from data file with given file name into the
-        // supplied array; return value is the number of persons in the data
-        // file
-        static int readPersons (String filename, Person[] persons)
-        {
-          int numPersons = 0;
+              Args:
+                  person: second person to be checked against
 
-          // open file and create a scanner for it
-          try (Scanner scanner = new Scanner (new File (filename)))
-          {
-            try
-            {
-              // read while there are lines in the file
-              while (scanner.hasNextLine ())
-              {
-                // report error and exit if program limit exceeded
-                if (numPersons > persons.length)
-                {
-                  System.out.println ("exceeded maximum number of persons " + persons.length);
-                  System.exit (-1);
-                }
+              Returns:
+                  True if the two are namesakes, False otherwise.
+              """
+              return self.firstname == person.firstname
 
-                // each line has last name, first name, address
-                String lastname = scanner.next ();
-                String firstname = scanner.next ();
-                String address = scanner.nextLine (); // address is the rest of the line
+      def read_persons (filename):
+          """
+          Read persons from given text file.
 
-                persons [numPersons] = new Person (lastname, firstname, address);
-                numPersons = numPersons + 1;
-              }
-            }
-            catch (Exception e)
-            {
-              System.out.println ("unable to read person data, exception " + e);
-              System.exit (-1);
-            }
-          }
-          catch (Exception e)
-          {
-            System.out.println ("unable to open file " + filename + " for reading, exception : " + e);
-            System.exit (-1);
-          }
+          Args:
+              filename: path to text file
 
-          return numPersons;
-        }
+          Returns:
+              list of objects of type Person
+          """
+          persons = []
+          with open (filename, 'r') as f:
+              for line in f.read ().splitlines (): # read entire file, split into lines
+                  words = line.split () # split lines into words
+                  lastname = words [0]
+                  firstname = words [1]
+                  # address is everything from 3rd word; these are joined into single string
+                  address = str.join (' ', words [2:]) 
+                  persons.append (Person (lastname, firstname, address))
 
-        // print the persons as groups of namesakes
-        static void printNamesakes (Person[] persons, int numPersons)
-        {
-          // go through the persons
-          for (int personInd = 0; personInd < numPersons; personInd = personInd + 1)
-          {
-            Person person = persons [personInd];
+          return persons
+                            
+      def print_namesakes (persons):
+          """
+          Print namesakes on consecutive lines.
 
-            // if the person has not been printed yet, print the person and
-            // the possible namesakes
-            if (person != null)
-            {
-              System.out.println (person);
-
-              // go through namesake candidates, starting from the next
-              // person
-              for (int candInd = personInd + 1; candInd < numPersons; candInd = candInd + 1)
-              {
-                Person candidate = persons [candInd];
-                if (candidate != null && person.isNamesake (candidate))
-                {
-                  System.out.println (candidate);
-                  persons [candInd] = null; // set to null, since the person has been printed
-                }
-              }
-            }
-          } 
-        }
-      }
-
-
-      // class containing information of person and helpful methods
-      class Person
-      {
-        public Person (String lastname, String firstname, String address)
-        {
-          this.lastname = lastname;
-          this.firstname = firstname;
-          this.address = address;
-        }
-
-        // method for testing whether another person is a namesake
-        public boolean isNamesake (Person person)
-        {
-          return firstname.equals (person.firstname);
-        }
-
-        public String toString ()
-        {
-          // note that address always contains a space at its beginning, so
-          // none needs to be added between firstname and address
-          return lastname + " " + firstname + address;
-        }
-
-        public String firstname, lastname, address; // member variables
-      }
+          Args:
+              list of objects of type Person
+          """
+          num_persons = len (persons)
+          # traverse through persons
+          for (index, person) in enumerate (persons):
+              if person != None: # if this person has not been printed yet
+                  print (person)
+                  # traverse the rest of the list, looking for namesakes
+                  for j in range (index + 1, num_persons):
+                      candidate = persons [j]
+                      if candidate != None and person.is_namesake (candidate):
+                          print (candidate)
+                          persons [j] = None # mark this person as printed
+                            
+      filename = prompt_filename ()
+      persons = read_persons (filename)
+      print_namesakes (persons)
 
     #+end_src
