--- a/README.org
+++ b/README.org
@@ -6,22 +6,21 @@
      should not strive for a real-world application.
    - Grading is based on
      - specification
-     - correctness and exception handling
+     - correctness
      - code clarity
+     - testing for valid input
      - resource management.
    - An example is provided for you below, but your program need not
      be as complicated. The example below is relatively complicated,
      because it
-     - is capable of reading input from multiple sources: command
-       line, data file and keyboard (user)
      - defines a class and uses it to store and analyze data
      - contains a nested loop (loop within a loop) to process the
        data
-     - uses ~null~ values for object variables to indicate that an
-       object has been processed already.
+     - uses ~None~ values to indicate that an object has already been
+       processed.
 
 ** Project deadline
-   The dealine of the project is <2024-02-02 Fri 23:59>.
+   The dealine of the project is <2025-01-31 Fri 23:59>.
 
 ** Project submission
    - Your submission consists of
@@ -104,13 +103,11 @@
        ~address~ is all the remaining text on the line.
 **** Correctness
 ***** Typical test case
-      File [[file:persons.txt]] contains data from 6 persons with 3 groups
-      of namesakes. The number of persons in these groups is 3
+      File [[file:persons.txt]] contains data from 6 persons with 3
+      groups of namesakes. The number of persons in these groups is 3
       (Michael), 2 (Jane) and 1. When the program (file
-      [[file:main.py]]) is run.
-
-      the output is correct, with each group of namesakes printed on
-      consecutive lines:
+      [[file:main.py]]) is run the output is correct, with each group
+      of namesakes printed on consecutive lines:
       #+begin_example
         give path to data file: persons.txt
         Cash Michael Las Vegas, US
