--- a/README.org
+++ b/README.org
@@ -28,7 +28,7 @@
         1. your target grade level (1, 2 or 3)
         2. specification
         3. test case with typical input
-        4. explanation of input validity is tested (level 2)
+        4. explanation of how input validity is tested (level 2)
         5. explanation of resource handling (level 3)
      2. one or more ~.py~-files containing the code
      3. possibly one or more text data files needed for the test case.
