--- a/README.org
+++ b/README.org
@@ -174,9 +174,9 @@
               list of objects of type Person
           """
           persons = []
-          with open (filename, 'r') as f:
-              for line in f.read ().splitlines (): # read entire file, split into lines
-                  words = line.split () # split lines into words
+          with open (filename) as f:
+              for line in f:
+                  words = line.split ()
                   lastname = words [0]
                   firstname = words [1]
                   # address is everything from 3rd word; these are joined into single string
@@ -184,7 +184,7 @@
                   persons.append (Person (lastname, firstname, address))
 
           return persons
-                            
+
       def print_namesakes (persons):
           """
           Print namesakes on consecutive lines.
@@ -203,9 +203,8 @@
                       if candidate != None and person.is_namesake (candidate):
                           print (candidate)
                           persons [j] = None # mark this person as printed
-                            
+
       filename = prompt_filename ()
       persons = read_persons (filename)
       print_namesakes (persons)
-
     #+end_src
